# jsonapi-orm

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  jsonapi_orm.rst  make.bat  modules.rst
jsonapi_orm/: .gitignore  __init__.py  jsonapi_orm.py
tests/: test_jsonapi_orm.py
tests/responses/: example_errors.json  example_list.json  example_single.json
