[bumpversion]
current_version = 0.1.7
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:jsonapi_orm/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
python-tag = py3

[metadata]
license_file = LICENSE

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts = --cov

[coverage:run]
branch = True
source = .

[coverage:report]
show_missing = True
omit =
    */tests/*
    */test_*.py

